# giltiq-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
giltiq/: __init__.py  client.py  models.py
