[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "giltiq"
version = "0.1.0"
description = "Python SDK for the Giltiq VAT Validation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.25.0"]
keywords = ["giltiq", "vat", "vat-validation", "vies", "bzst", "tax", "eu", "b2b", "api"]
authors = [
    { name = "Giltiq", email = "hello@giltiq.de" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://giltiq.de"
Documentation = "https://giltiq.de/docs"
Repository = "https://github.com/giltiq/giltiq-python"
Issues = "https://github.com/giltiq/giltiq-python/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]
